--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,28 @@ version: '3'
 
 services:
   notebook:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     volumes:
       - .:/app
     ports:
       - 8888:8888
+
+  mysql:
+    image: mysql:8.3.0
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_USER: 'example'
+      MYSQL_PASSWORD: 'example'
+      MYSQL_DATABASE: 'example'
+      MYSQL_ROOT_PASSWORD: 'example'
+    ports:
+      - 3306:3306
+
+  adminer:
+    image: adminer:4.8.1
+    restart: always
+    ports:
+      - 8080:8080
