--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-h5py == 3.11.0
+h5py == 3.10.0
 jupyter == 1.0.0
 keras == 3.3.3
 matplotlib == 3.8.4
@@ -10,3 +10,4 @@ pillow == 10.3.0
 scikit-learn == 1.4.0
 seaborn == 0.13.2
 spacy == 3.7.4
+yfinance == 0.2.38
