--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Cartopy == 0.23.0
+geocoder == 1.38.1
+geopy == 2.4.1
 h5py == 3.10.0
 jupyter == 1.0.0
 keras == 3.3.3
@@ -10,5 +12,6 @@ pandas == 2.2.1
 pillow == 10.3.0
 scikit-learn == 1.4.0
 seaborn == 0.13.2
+shapely == 2.0.6
 spacy == 3.7.4
 yfinance == 0.2.38
