--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ jupyter == 1.0.0
 keras == 3.3.3
 matplotlib == 3.8.4
 mysql-connector-python == 9.0.0
+mlxtend == 0.23.1
 notebook == 7.1.3
 numpy == 1.26.4
 pandas == 2.2.1
